--- a/playblock.html
+++ b/playblock.html
@@ -11,6 +11,8 @@
             background-image: url('星空.jpg');
             background-repeat: no-repeat;
             background-size: cover;
+            background-color: black;
+
         }
         
         .fix {
