--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <body id='body'>
     <div>
-        <a href="迷宫.html"><button>迷宫</button></a>
+        <a href="maze.html"><button>迷宫</button></a>
         <a href="playblock.html"><button>打砖块</button></a>
     </div>
 </body>
