--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
         <span>请点击你想要查看的作品</span><br><br>
         <a href="maze.html"><button>迷宫</button></a>
         <a href="playblock.html"><button>打砖块</button></a>
+        <a href="music.html"><button>听音乐</button></a>
+
 
     </div>
 </body>
